--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ data_script/
 Train_scvi.py
 analysis/
 *DS_Store
+!data/CRA001160/final_CRA001160_spliced_allgenes.h5ad
+!data/CRA001160/final_CRA001160_unspliced_allgenes.h5ad
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
